--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/graphisoft/jobs/4367320002'>Job Application for Product Designer Manager at Graphisoft</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/diversatek/job/oxODafwS'>Diversatek, Inc. Careers - Product Manager, Medical Devices</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -56,11 +60,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/endless/82c9be8f-89c2-4e5c-800e-5b854480811f'>Endless - Sr. Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/endless/82c9be8f-89c2-4e5c-800e-5b854480811f'>Endless - Sr. Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -136,7 +140,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at SkySlope.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pegipegi-dot-com.workable.com/j/6053F93353?viewed=true'>Pegipegi - Jobs: Associate Product Manager - Apply online</a></h5> 
+<h5><a href='https://pegipegi-dot-com.workable.com/j/6053F93353?viewed=true'>Pegipegi - Jobs: Associate Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Associate Product Manager at Pegipegi.</p>
 <hr/>
@@ -168,7 +172,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thinkhr/2c5fa317-d44e-4367-a413-63345f30ac4c'>ThinkHR - Technical Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/thinkhr/2c5fa317-d44e-4367-a413-63345f30ac4c'>ThinkHR - Technical Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -182,7 +186,7 @@
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/product-owner-po-%E2%80%93-analista-s%C3%AAnior-13043'>Product Owner (PO) ? Analista S?nior - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/product-owner-po-%E2%80%93-analista-s%C3%AAnior-13043'>Product Owner (PO) ? Analista S?nior - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -245,7 +249,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1792324'>Job Application for Product Manager, Payments at Vimeo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1792324'>Job Application for Product Manager, Payments at Vimeo</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -309,7 +313,7 @@ other?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adomik.workable.com/j/520CF09ACB?viewed=true'>Adomik - Jobs: Product Owner (H/F) - Apply online</a></h5> 
+<h5><a href='https://adomik.workable.com/j/520CF09ACB?viewed=true'>Adomik - Jobs: Product Owner (H/F) - Apply online</a></h5> 
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -418,7 +422,7 @@ responsible for the overall management of one or more technology solutions for..
 <p>Jul 15, 2019 ... Product Manager, Data Protection. Jakarta. Product ? Product Management. Full 
 Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://widger-talent-llc.workable.com/j/B94E949F8D'>Widger Talent LLC - Jobs: ChromaDex - Product Manager - Apply online</a></h5> 
+<h5><a href='https://widger-talent-llc.workable.com/j/B94E949F8D'>Widger Talent LLC - Jobs: ChromaDex - Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Los Angeles California, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -452,10 +456,6 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <hr/>
 <h5><a href='https://boards.greenhouse.io/rothys/jobs/4368158002'>Job Application for Senior Product Designer at Rothy's</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://polyone.referrals.selectminds.com/jobs/sr-product-manager-1823'>Sr. Product Manager - PolyOne Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
