--- a/web-developer.html
+++ b/web-developer.html
@@ -63,11 +63,11 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248860-java-web-developer-operation'>Woongjin, Inc Java Web Developer & Operation | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248860-java-web-developer-operation'>Woongjin, Inc Java Web Developer & Operation | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://helloagain-jobs.join.com/jobs/250448-web-developer'>Job @ helloain (Leonding): WEB DEVELOPER | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloagain-jobs.join.com/jobs/250448-web-developer'>Job @ helloain (Leonding): WEB DEVELOPER | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -148,7 +148,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oMf66fwX'>The Havas Group Careers - Full-Stack Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oMf66fwX'>The Havas Group Careers - Full-Stack Web Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -191,7 +191,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Apply online for the job of Web Developer (PHP, Wordpress) at Ignite Hospitality.</p>
 <hr/>
-<h5><a href='https://advfn.workable.com/j/6B68CC07E6'>Jobs: Web Application Developer (PHP, JS) - Apply online - ADVFN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://advfn.workable.com/j/6B68CC07E6'>Jobs: Web Application Developer (PHP, JS) - Apply online - ADVFN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of Web Application Developer (PHP, JS) at ADVFN.</p>
 <hr/>
@@ -203,7 +203,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
@@ -332,7 +332,7 @@ und JavaScript? M?chtest du mithilfe der neusten Technologien und zusammen
 <p><span class="badge badge-light">Oxford London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1781962'>Job Application for Fullstack Web Developer - Software Engineer II at TripAdvisor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1781962'>Job Application for Fullstack Web Developer - Software Engineer II at TripAdvisor</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -468,7 +468,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">Canada Canada Canada Canada</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
